Refactor RelatorioService to replace Collectors.toList() with Stream.toList()